# browser-buddy

browser-buddy/: README.md  package-lock.json  package.json
browser-buddy-backend/: main.py  pyproject.toml
browser-buddy-backend/controllers/: chat_controller.py
browser-buddy-backend/db/: chroma_db.py
browser-buddy-backend/models/: chat.py
browser-buddy-backend/routers/: chat.py
browser-buddy-backend/utils/: langchain_setup.py  youtube.py
browser-buddy/src/: background.js  content.js  manifest.json  options.html  options.js
